--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,10 +11,10 @@
     --primero: #F4F0FA;
     --segundo: #232323;
     --tercero: #232323;
-    --cuarto: #A5A1AA;
+    --cuarto: #dee2e6;
     --quiento: #DB0F27;
     --sexto: #DB4241;
-    --spetimo: #EDEDED;
+    --spetimo: #f5f5f5;
     
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
@@ -42,16 +42,124 @@
 
 *, ::before, ::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    scroll-padding-top: 4rem;
+    list-style: none;
+    text-decoration: none;
 }
 
 
 body {
     font-family: var(--body-font);
     margin: var(--header-height) 0 0 0;
-    padding: 1rem 1rem 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background-color: var(--primero);
     color: var(--segundo);
     font-display: swap !important;
+}
+
+img {
+    width: 100%;
+}
+
+.container {
+    max-width: 1068px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+header {
+    display: block;
+    width: 100%;
+    background: var(--spetimo);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 35px;
+}
+
+.logo img{
+    width:  170px;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+.logo .bx {
+    font-size: 24px;
+}
+
+.navbar {
+    display: flex;
+}
+
+.navbar a {
+    padding: 8px 17px;
+    color: var(--segundo);
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.navbar a:hover {
+    color: var(--quiento);
+}
+
+#menu-icon {
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+}
+
+#menu {
+    display: none;
+}
+
+.btn {
+    padding: 8px 22px;
+    background: var(--segundo);
+    color: var(--primero);
+    border-radius: 0.3rem;
+}
+
+.btn:hover {
+    background: var(--quiento);
+    transition: 0.4s all ease;
+}
+
+/* HOME */
+
+section {
+    padding: 4.5rem 0 rem;
+}
+
+.home {
+    margin-top: 5rem;
+    background: url(/assets/img/hero-garizabaloabogados.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 440px;
+    border-radius: 1.3rem;
+    display: flex;
+    align-items: center;
+}
+
+.home-text {
+    padding-left: 35px;
+}
+
+.home-text h1 {
+    font-size: 2rem;
+    font-weight: 800;
+    margin-bottom: 1rem;
 }
