--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,7 +106,6 @@ header {
     padding: 8px 17px;
     color: var(--segundo);
     font-size: 1rem;
-    text-transform: uppercase;
     font-weight: 500;
 }
 
@@ -159,7 +158,35 @@ section {
 }
 
 .home-text h1 {
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-weight: 800;
     margin-bottom: 1rem;
+}
+
+/* NOSOTROS */
+
+.about {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(18rem, auto));
+    gap: 2rem;
+}
+
+.about-img img {
+    border-radius: 3rem 0 3rem 3rem;
+}
+
+.about-text span {
+    font-size: 1rem;
+    font-size: 500;
+    color: var(--quiento);
+}
+
+.about-text h2 {
+    font-size: 1.7rem;
+    font-weight: 700;
+}
+
+.about-text p { 
+    font-size: 0.938rem;
+    margin: 1rem 0 1rem;
 }
