--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,7 +203,7 @@ section {
     padding: 20px;
     background-color: #e2e2e2;
     text-align: center;
-    border-radius: 1.8rem;
+    border-radius: 1rem;
 }
 
 .sales .box:hover {
@@ -218,4 +218,129 @@ section {
     background: var(--primero);
     color: var(--quiento);
     font-size: 20px;
+}
+
+.sales .box h3 {
+    font-size: 1.2rem;
+    margin: 1rem 0 0.4rem;
+}
+
+.sales .box p {
+    font-size: 00.938rem;
+}
+
+.heading {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.heading span {
+    font-weight: 500;
+    color: var(--quiento);
+}
+
+.heading h2 {
+    font-size: 1.7rem;
+}
+
+.heading p {
+    font-size: 0.938rem;
+}
+
+.properties {
+    background-color: #dadada;
+    border-radius:  0.938rem;
+}
+
+.properties-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, auto));
+    gap: 3rem;
+    padding: 0 50px;
+}
+
+.properties-container .box {
+    background-color: var(--spetimo);
+    padding: 10px;
+    border-radius: 0.938rem;
+    box-shadow: var(--cuarto);
+}
+
+.properties-container .box:hover {
+    transform: translateY(-10px);
+    transition: 0.5s;
+}
+
+.properties-container .box img {
+    border-radius: 0.938rem;
+    height: 220px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.properties-container .box h3 {
+    font-size:  1rem;
+    font-weight: 600;
+    float: right;
+}
+
+.properties-container .box .content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+}
+
+.properties-container .box .content .text h3{
+    font-weight: 500;
+    
+}
+.properties-container .box .content .text p{
+    font-size: 0.8rem;
+}
+.properties-container .box .content .text .icons{
+    display: flex;
+    align-self: center;
+    column-gap: 1rem;
+}
+.properties-container .box .content .text .bx{
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+}
+.properties-container .box .content .text span{
+    font-size: 12px;
+    font-weight: 500;
+    margin-left: 4px;
+    font-family: var(--body-font) !important;
+}
+
+/* Subcriptores */
+
+.newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 2rem;
+    justify-content: center;
+    text-align: center;
+}
+
+.newsletter h2 {
+    font-size: 1.7rem;
+}
+
+.newsletter form {
+    background-color: #dadada;
+    padding: 6px 10px;
+    border-radius: 0.938rem;
+}
+
+.newsletter form input {
+    border: none;
+    outline: none;
+    font-family: var(--body-font);
+}
+
+.newsletter #email-box {
+    width: 280px;
 }
